# mentra

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: rust-ci.yml
docs/: .gitignore  agentic-core-hardening.md  responses-coding-agent.md  tooling-architecture.md
docs/adr/: 0001-pluggable-agent-core.md  0002-model-conventional-coding-tools.md  0003-thinking-reasoning-preservation.md  0004-host-orchestration.md
docs/releases/: v0.10.0.md  v0.7.0.md  v0.7.1.md  v0.8.0.md  v0.9.0.md
examples/: Cargo.toml  chat.rs  cli_runtime.rs  custom_tool.rs  host_orchestration.rs  openai_oauth.rs  subagent_tool.rs
mentra/: Cargo.toml  LICENSE  README.md
mentra-openai-auth/: Cargo.toml
mentra-openai-auth/src/: client.rs  credential.rs  lib.rs  store.rs
mentra-provider/: Cargo.toml  README.md
mentra-provider/src/: anthropic.rs  definition.rs  error.rs  gemini.rs  lib.rs  model.rs  registry.rs  request.rs  response.rs  responses.rs  stream.rs  tool.rs
mentra-provider/src/anthropic/: model.rs  sse.rs  stream_model.rs
mentra-provider/src/gemini/: model.rs
mentra-provider/src/responses/: model.rs  session.rs  sse.rs  websocket.rs
mentra/benches/: long_session.rs
mentra/src/: agent.rs  background.rs  compaction.rs  default_paths.rs  lib.rs  memory.rs  provider.rs  runtime.rs  session.rs  team.rs  test.rs  tool.rs  transcript.rs
mentra/src/agent/: compact.rs  config.rs  events.rs  lifecycle.rs  pending.rs  pending_block.rs  round_strategy.rs  runner.rs  snapshot.rs  steering.rs  subagent.rs  task_state.rs  team.rs  terminal_output.rs  tests.rs  wait.rs
mentra/src/agent/tests/: budgets.rs  pending.rs  round_strategy.rs  runtime.rs  runtime_compact.rs  runtime_memory.rs  runtime_resume.rs  runtime_snapshot.rs  runtime_tasks.rs  runtime_tools.rs  runtime_volatile_store.rs  steering.rs  support.rs  tool_output.rs
mentra/src/auth/openai/: store.rs
mentra/src/background/: hook.rs  observer.rs  store.rs
mentra/src/compaction/: tests.rs
mentra/src/mcp/: bridge.rs  client.rs  manager.rs  mod.rs  protocol.rs  tests.rs
mentra/src/memory/: compaction.rs  engine.rs  journal.rs
mentra/src/memory/journal/: ops.rs  recovery.rs  snapshot.rs  state.rs  store.rs  tests.rs
mentra/src/provider/: anthropic.rs  gemini.rs  model.rs  openai.rs  openrouter.rs
mentra/src/provider/anthropic/: model.rs  sse.rs  stream_model.rs
mentra/src/provider/gemini/: model.rs  sse.rs
mentra/src/provider/model/: response_builder.rs  stream.rs
mentra/src/provider/openai/: model.rs  sse.rs
mentra/src/runtime/: agent.rs  background.rs  builder.rs  control.rs  error.rs  handle.rs  hybrid_store.rs  intrinsic.rs  skill.rs  store.rs  task.rs  task_board.rs  task_graph.rs  team.rs  todo.rs  volatile_store.rs
mentra/src/runtime/agent/: compact.rs  config.rs  events.rs  lifecycle.rs  pending.rs  pending_block.rs  runner.rs  snapshot.rs  subagent.rs  task_state.rs  team.rs  tests.rs
mentra/src/runtime/agent/tests/: pending.rs  runtime.rs  runtime_compact.rs  runtime_snapshot.rs  runtime_tasks.rs  runtime_todos.rs  runtime_tools.rs  support.rs
mentra/src/runtime/control/: command.rs  hooks.rs  policy.rs  run.rs  sandbox.rs  shell_parse.rs  shell_types.rs
mentra/src/runtime/handle/: agents.rs  construction.rs  execution.rs  tooling.rs
mentra/src/runtime/intrinsic/: descriptor.rs  execute.rs
mentra/src/runtime/task/: graph.rs  input.rs  intrinsic.rs  store.rs  tests.rs  types.rs
mentra/src/runtime/task/intrinsic/: descriptor.rs  execute.rs
mentra/src/runtime/task_graph/: graph.rs  input.rs  render.rs  store.rs  tests.rs  types.rs
mentra/src/runtime/team/: actor.rs  intrinsic.rs  manager.rs  prompt.rs  store.rs  types.rs
mentra/src/runtime/team/intrinsic/: execute.rs  schema.rs
mentra/src/runtime/volatile_store/: background.rs  memory.rs  permission.rs  task.rs  team.rs
mentra/src/session/: event.rs  handle.rs  mapping.rs  permission.rs  tests.rs
mentra/src/team/: actor.rs  host.rs  intrinsic.rs  manager.rs  types.rs
mentra/src/team/intrinsic/: execute.rs  schema.rs
mentra/src/tool/: authorization.rs  bash_validation.rs  builtin.rs  coding.rs  context.rs  descriptor.rs  files.rs  internal.rs  model.rs  orchestrator.rs  runtime.rs  truncation.rs
mentra/src/tool/builtin/: read_only.rs  shell.rs
mentra/src/tool/coding/: execution.rs  input.rs
mentra/src/tool/files/: execution.rs  preview.rs  schema.rs  workspace.rs
mentra/src/tool/files/workspace/: edit.rs  operations.rs
mentra/tests/: agent_runtime.rs  public_api.rs
