[package]
name = "mentra-examples"
version = "0.1.0"
edition = "2024"

[dependencies]
mentra = { path = "../mentra" }
tokio = { version = "1.50.0", features = ["macros", "rt-multi-thread"] }
dotenvy = "0.15"
time = { version = "0.3", features = ["formatting"] }

[[example]]
name = "chat"
path = "chat.rs"
