[package]
name = "mentra-examples"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
mentra = { path = "../mentra", features = ["openai-oauth"] }
tokio = { version = "1.50.0", features = ["macros", "rt-multi-thread"] }
dotenvy = "0.15"
time = { version = "0.3", features = ["formatting"] }
async-trait = "0.1.89"
serde_json = "1.0.149"

[[example]]
name = "chat"
path = "chat.rs"

[[example]]
name = "quickstart"
path = "quickstart.rs"

[[example]]
name = "openai_oauth"
path = "openai_oauth.rs"

[[example]]
name = "custom_tool"
path = "custom_tool.rs"

[[example]]
name = "subagent_tool"
path = "subagent_tool.rs"

[[example]]
name = "team_collaboration"
path = "team_collaboration.rs"

[[example]]
name = "cli_runtime"
path = "cli_runtime.rs"
