[package]
name = "mentra-openai-auth"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "OpenAI OAuth and token storage helpers for Mentra runtimes"

[dependencies]
mentra = { path = "../mentra" }
async-trait = "0.1.89"
base64 = "0.22.1"
directories = "6.0.0"
rand = "0.9.2"
reqwest = { version = "0.12", default-features = false, features = [
    "json",
    "rustls-tls",
] }
ring = "0.17.14"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
thiserror = "2.0.18"
time = { version = "0.3", features = ["formatting", "parsing", "serde"] }
tokio = { version = "1.50.0", features = ["io-util", "net", "sync", "time"] }
url = "2.5.8"
