[package]
name = "mentra-provider"
version = "0.1.0"
edition = "2024"
description = "Shared provider core for Mentra"
license = "MIT"

[dependencies]
async-trait = "0.1.89"
base64 = "0.22.1"
futures-util = { version = "0.3.31", features = ["sink"] }
http = "1.3.1"
reqwest = { version = "0.12", default-features = false, features = [
    "json",
    "rustls-tls",
    "stream",
] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
strum = { version = "0.27", features = ["derive"] }
thiserror = "2.0.18"
time = { version = "0.3", features = ["formatting", "parsing", "serde"] }
tokio = { version = "1.50.0", features = ["macros", "sync"] }
tokio-tungstenite = "0.28"
url = "2.5.8"
zstd = "0.13"
