[package]
name = "mentra"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.50.0", features = ["full"] }
reqwest = { version = "0.12", default-features = false, features = [
    "json",
    "rustls-tls",
    "stream",
] }
url = "2.5.8"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
async-trait = "0.1.89"
futures-util = "0.3.31"
time = { version = "0.3", features = ["formatting", "parsing"] }
base64 = "0.22.1"
