[package]
name = "mentra"
version = "0.1.0"
edition.workspace = true
description = "An agent runtime for tool-using LLM applications"
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation = "https://docs.rs/mentra"
readme = "README.md"
keywords = ["agents", "llm", "runtime", "tools", "ai"]
categories = ["asynchronous", "development-tools"]

[dependencies]
tokio = { version = "1.50.0", features = ["full"] }
reqwest = { version = "0.12", default-features = false, features = [
    "json",
    "rustls-tls",
    "stream",
] }
url = "2.5.8"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
async-trait = "0.1.89"
futures-util = "0.3.31"
time = { version = "0.3", features = ["formatting", "parsing", "serde"] }
base64 = "0.22.1"
serde_yaml_ng = "0.10"
rusqlite = { version = "0.32.1", features = ["bundled"] }
