[package]
name = "mentra"
version = "0.5.0"
edition.workspace = true
rust-version = "1.85"
description = "An agent runtime for tool-using LLM applications"
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation = "https://docs.rs/mentra"
readme = "README.md"
keywords = ["agents", "llm", "runtime", "tools", "ai"]
categories = ["asynchronous", "development-tools"]

[features]
default = []
openai-oauth = ["dep:ring"]
test-utils = []

[dependencies]
mentra-provider = { version = "0.2.0", path = "../mentra-provider" }
tokio = { version = "1.50.0", features = ["full"] }
reqwest = { version = "0.12", default-features = false, features = [
    "json",
    "rustls-tls",
    "stream",
] }
url = "2.5.8"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
async-trait = "0.1.89"
futures-util = "0.3.31"
time = { version = "0.3", features = ["formatting", "parsing", "serde"] }
base64 = "0.22.1"
serde_yaml_ng = "0.10"
directories = "6.0.0"
rusqlite = { version = "0.32.1", features = ["bundled"] }
thiserror = "2.0.18"
strum = { version = "0.27", features = ["derive"] }
libc = "0.2"
regex = "1.12.2"
rand = "0.9.2"
ring = { version = "0.17.14", optional = true }

[dev-dependencies]
criterion = { version = "0.5", features = ["async_tokio"] }

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.61.2", features = ["Win32_Foundation", "Win32_System_Threading"] }

[[bench]]
name = "long_session"
harness = false
required-features = ["test-utils"]
